<resources>
    <string name="app_name">PhotoFrame</string>
    <string name="no_permission_granted">No permissions granted, PhotoFrame cannot work without
    these permissions and no photo\'s will be displayed!</string>
    <string name="permission_explanation">PhotoFrame needs to read images from the external storage
    and cannot function without. Please allow the write external storage permission!</string>
    <string name="no_location_permission_granted">Location permission denied. No weather data can be acquired without this permission!</string>
    <string name="no_location_permission_explanation">PhotoFrame needs the location permission to
    retrieve weather data from Google.</string>
    <string name="behaviour_preference_category">Behaviour</string>
    <string name="time_between_images_preference_title">Image time</string>
    <string name="time_between_images_preference_summary">Set the time to display one image in seconds.</string>
    <string name="weather_update_time_preference_title">Weather update interval</string>
    <string name="weather_update_time_preference_summary">How often should weather be updated (time in minutes)?</string>
    <string name="settings">Settings</string>
    <string name="acquiring_weather_failed">Acquiring weather data failed. Please check location permission!</string>
    <string name="location_services_disabled_title">Location services disabled.</string>
    <string name="location_services_disabled_message">Location services are disabled! These must be enabled to acquire weather data for
    current position. You will now be brought to device settings to enable these.</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

</resources>
